fdo#76803: writerfilter: fix image wrap polygon import again

The division in Fraction::init() should be a signed one, to prevent a
change in sign, e.g., -220869/9 = +477194047.

(regression from f8307e5ae11e8235fa1fb88ed52625bf9c650dc2)

Change-Id: Icbbd1721144ff42c53ae71312641bd601ba60762
(cherry picked from commit dcbac37efebb9877a72f7c9914b63d60f46a5656)